<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_subject"
            android:icon="@drawable/subjects"
            android:title="@string/select_subjects" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/students"
            android:title="@string/students" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/messages"
            android:title="@string/message" />
    </group>
    <group>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contactus"
            android:title="@string/contact_us" />
    </group>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>