<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.stutor.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_subject"
        android:name="com.example.stutor.ui.subject.SubjectFragment"
        android:label="@string/select_subjects"
        tools:layout="@layout/fragment_subject" />

    <fragment
        android:id="@+id/nav_student"
        android:name="com.example.stutor.ui.student.StudentFragment"
        android:label="@string/students"
        tools:layout="@layout/fragment_student" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.stutor.ui.logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />
</navigation>